# src/main/java/com/example/todoapp/presentation/dto/ErrorDto.java
@@ -1,0 +1,4 @@
+package com.example.todoapp.presentation.dto;
+
+public record  ErrorDto (String field, String message){
+}
