# src/main/java/com/example/todoapp/presentation/dto/ReadDto.java
@@ -1,4 +1,9 @@
 package com.example.todoapp.presentation.dto;
 
-public record ReadDto( int id, String title, String description, boolean done) {
+import com.example.todoapp.business.model.Task;
+
+public record ReadDto(int id, String title, String description, boolean done) {
+    public static ReadDto toReadDto(Task task) {
+        return new ReadDto(task.id(), task.title(), task.description(), task.done());
+    }
 }
